#222 Use JavaFX gradle plugin (#223)
Use JavaFX gradle plugin